# signal

./: .env.example  .gitignore  .mcp.json  BACKTEST.md  CLAUDE.md  README.md  pyproject.toml  render.yaml
.github/workflows/: evals.yml  sourcing.yml
config/: smart_accounts.yaml  smart_money_wallets.sample.yaml  thesis.yaml  watchlist.yaml
data/backtest/: ground_truth.frachtis.filled.json  ground_truth.frachtis.json  ground_truth.sample.json
data/fixtures/: messari_funding.json  messari_research.json  nansen_convergence.json  nansen_flows.json  nansen_holders.json  network_radar_snapshots.json  sample_candidates.json  watchlist_sample.yaml
docs/: .~lock.Quantum_Thesis.pdf#  CONTEXT.md  Demo_Video_Script.md  Frachtis_AI_Agent_Builder_Brief.md  HOW_IT_WORKS.md  Quantum_Thesis.docx  Quantum_Thesis.md  SIGNALS_BUILD_SPEC.md  Signal_Phase0_Backtest_Plan.md  Signal_TPM_Brief_AIxFinance.md  Sourcing_Playbook.md  Sourcing_Signals_Research.md  index.html  styles.css
docs/data/: state.json
docs/data/memos/: mandate-labs-mandate.md.json
evals/: agent_check.py  credibility_check.py  eval_set.jsonl  messari_check.py  nansen_check.py  network_radar_check.py  ratelimit_check.py  run_evals.py  watchlist_check.py
mcp_servers/github_velocity/: README.md  server.py
scripts/: build_static_demo.py
src/signalfund/: __init__.py  __main__.py  agent.py  backtest.py  dashboard.py  dedup.py  digest.py  env.py  llm.py  memo.py  models.py  orchestrator.py  reconstruct.py  scoring.py  store.py  webapp.py
src/signalfund/sources/: base.py  blockscout.py  github_velocity.py  team.py  (+8 more)
(+3 files in other folders)
