[project]
name = "signalfund"
version = "0.1.0"
description = "Signal — a thesis-driven dealflow sourcing agent for a crypto-native fund."
requires-python = ">=3.10"
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
live = ["httpx>=0.27"]
llm = ["anthropic>=0.39", "openai>=1.40"]
mcp = ["mcp>=1.2", "httpx>=0.27"]
dev = ["pytest>=8"]

[project.scripts]
signal = "signalfund.orchestrator:main"
signal-web = "signalfund.webapp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/signalfund"]
